# compilers

./: .gitignore  Cargo.toml  README.md  gen_images.sh
cfg2proper/: Cargo.toml  input_cfg.txt  output_cfg.json
cfg2proper/src/: main.rs
cfg2proper/src/grammar/: mod.rs  parser.rs  transformations.rs
recursive-descent/: Cargo.toml  README.md  gen_images.sh
recursive-descent/src/: main.rs
recursive-descent/src/syntax_tree/: draw.rs  mod.rs  parser.rs
regex2fsm/src/fsm/: dfa.rs  dfa_minimization.rs  mod.rs
regex2fsm/src/syntax_tree/: mod.rs  parser.rs  utils.rs
src/: main.rs
src/fsm/: dfa.rs  dfa_minimization.rs  draw.rs  mod.rs  utils.rs
src/syntax_tree/: mod.rs  parser.rs  utils.rs
