[package]
name = "cfg2proper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
itertools = "0.10.1"
lazy_static = "1.4.0"
serde_json = "1.0.64"
serde = {version = "1.0.126", features = ["derive"]}
